# backend

./: .gitignore  DOCKERFILE  README.md  docker-compose.yml  main.tf  outputs.tf  pyproject.toml  requirements.txt  terraform.tfvars  test.db  variables.tf
.old/: main2.py  main5.py
app/: .env  __main__.py  app.py  pyproject.toml  server.py
app/contract/: main1.py  main4.py
contract/: main.py  main3.py
h241_contract/: main.py  user.py
tests/: test_main.py
