[tool.poetry]
name = "contract"
version = "0.1.0"
description = ""
authors = ["Jacob Valdez <jacobfv123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
kybra = "^0.6.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
apscheduler = "^3.10.4"
boto3 = "^1.34.103"
stripe = "^9.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
