[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jacob Valdez <jacobfv123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
apscheduler = "^3.10.4"
stripe = "^9.6.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
aiosqlite = "^0.20.0"
sqlmodel = "^0.0.18"
email-validator = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
requests = "^2.31.0"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
